force-app/main/default/objects/Aeropuerto__c/Aeropuerto__c.object-meta.xml
<CustomObject>
    <description>Es la locacion fisica que esta acondicionada para recibir y despachar vuelos de diferentes ciudades</description>
    <label>Aeropuerto</label>
    <nameField>
        <label>Nombre del Aeropuerto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aeropuertos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>