force-app/main/default/objects/Aeropuerto__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <description>Ciudad perteneciente a un pais y seleccionable para un vuelo</description>
    <label>Ciudad</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pais__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Ciudad</valueSetName>
    </valueSet>
</CustomField>