force-app/main/default/objects/Aeropuerto__c/fields/Codigo_de_Aeropuerto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Aeropuerto__c</fullName>
    <description>Codigo asignado al aeropuerto</description>
    <displayFormat>A-{00000}</displayFormat>
    <label>Codigo de Aeropuerto</label>
    <type>AutoNumber</type>
</CustomField>