force-app/main/default/objects/Aeropuerto__c/fields/Codigo_IATA__c.field-meta.xml
<CustomField>
    <fullName>Codigo_IATA__c</fullName>
    <description>Codigo IATA que identifica a aeropuerto</description>
    <label>Codigo IATA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>