force-app/main/default/objects/Aeropuerto__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <description>Listado de paises permitidos para un veulo</description>
    <label>Pais</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pais</valueSetName>
    </valueSet>
</CustomField>