force-app/main/default/objects/Aeropuerto__c/fields/Puertas_de_embarque__c.field-meta.xml
<CustomField>
    <fullName>Puertas_de_embarque__c</fullName>
    <label>Puertas de embarque</label>
    <length>200</length>
    <type>Text</type>
</CustomField>