force-app/main/default/objects/Aeropuerto__c/fields/Recibe_Vuelos_Internacionales__c.field-meta.xml
<CustomField>
    <fullName>Recibe_Vuelos_Internacionales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si el vuelo recibe vuelos Internacionales.</description>
    <label>¿Recibe Vuelos Internacionales?</label>
    <type>Checkbox</type>
</CustomField>