force-app/main/default/objects/Aeropuerto__c/fields/Recibe_Vuelos_Nacionales__c.field-meta.xml
<CustomField>
    <fullName>Recibe_Vuelos_Nacionales__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Valida si el aeropuerto recibe vuelos nacionales</description>
    <label>¿Recibe Vuelos Nacionales?</label>
    <type>Checkbox</type>
</CustomField>