force-app/main/default/objects/Aeropuerto__c/listViews/Internacional.listView-meta.xml
<ListView>
    <fullName>Internacional</fullName>
    <columns>Codigo_IATA__c</columns>
    <columns>NAME</columns>
    <columns>Pais__c</columns>
    <columns>Ciudad__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Pais__c</field>
        <operation>notEqual</operation>
        <value>Colombia</value>
    </filters>
    <label>Internacional</label>
</ListView>