force-app/main/default/objects/Aeropuerto__c/listViews/Nacional.listView-meta.xml
<ListView>
    <fullName>Nacional</fullName>
    <columns>Codigo_IATA__c</columns>
    <columns>NAME</columns>
    <columns>Ciudad__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Pais__c</field>
        <operation>equals</operation>
        <value>Colombia</value>
    </filters>
    <label>Nacional</label>
</ListView>